# ya-rust-sprint-3-project

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
blog-cli/: Cargo.toml  README.md
blog-cli/src/: cli.rs  main.rs  token.rs
blog-client/: Cargo.toml
blog-client/src/: dto.rs  error.rs  grpc_client.rs  http_client.rs  lib.rs
blog-proto/: Cargo.toml  README.md  build.rs
blog-proto/proto/: blog.proto
blog-proto/src/: lib.rs
blog-server/: Cargo.toml  README.md
blog-server/.sqlx/: query-055e6f910638e3136326ec4cbbb535730f8e1fbb4d090c98a9ebf75dc90fd08b.json  query-4903fbe25147c9690c6349b66bc6f8d255afad38dd6fdb388a25a2b1ed126e92.json  query-6d897e3c8c9dcb39c461f143567c553ac7aac95bb219b851d8df9f938be7874e.json  query-8d6f256538da85a262fdb771a16bc81bf36cc7822c63258339cf5f8598d13d93.json
blog-server/migrations/: 20260411000001_create_users.up.sql  20260411000002_create_posts.up.sql
blog-server/src/: main.rs
blog-server/src/application/: auth_service.rs  blog_service.rs  error.rs  mod.rs
blog-server/src/data/: post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  mod.rs  post.rs  user.rs
blog-server/src/infrastructure/: config.rs  database.rs  logging.rs  mod.rs  security.rs
blog-server/src/presentation/: auth.rs  error.rs  http_handlers.rs  mod.rs
blog-server/src/presentation/grpc_service/: mod.rs
blog-server/src/presentation/http_handlers/: auth.rs  mod.rs  posts.rs  protected.rs  public.rs
blog-server/src/presentation/middleware/: grpc.rs  jwt.rs  mod.rs  request_id.rs  timing.rs
blog-wasm/: Cargo.toml  README.md  index.html  styles.css
blog-wasm/src/: api.rs  app.rs  lib.rs  main.rs  types.rs
blog-wasm/src/components/: login_form.rs  mod.rs  post_form.rs  post_list.rs  register_form.rs
