[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.11"
blog-proto = { path = "../blog-proto" }
reqwest = { version = "0.13.2", features = ["json", "query"] }
prost = "0.14.3"
prost-types = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
tokio = "1.52.1"
async-trait = "0.1.89"
