[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
rand = "0.8"
tokio-stream = "0.1"
tonic = "0.11"
blog-proto = { path = "../blog-proto" }