[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4.13.0"
actix-cors = "0.7.1"
actix-service = "2"
async-trait = "0.1"
actix-web-httpauth = "0.8.2"

argon2 = "0.5"
jsonwebtoken = "10.3.0"

once_cell = "1"

dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono", "time"] }

anyhow = "1"
thiserror = "1"

futures-util = "0.3"

blog-proto = { path = "../blog-proto" }
prost = "0.12"
prost-types = "0.12"
tonic = "0.11"

