[package]
name = "blog-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }

gloo-net = { version = "0.5", features = ["http"] }
gloo-storage = { version = "0.2" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"


anyhow = "1.0"
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "InputEvent",
    "EventTarget",
] }
chrono = { version = "0.4", features = ["serde"] }



